--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "mitt": "^3.0.0",
     "sweetalert2": "^11.0.18",
+    "swiper": "^6.7.5",
     "vee-validate": "^4.4.5",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
