依建議進行修改(finished)

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "vee-validate": "^4.4.5",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-loading-overlay": "4.0",
     "vue-router": "^4.0.0-0",
-    "vue-sweetalert2": "^5.0.2"
+    "vue-sweetalert2": "^5.0.2",
+    "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
